atualizacoes estrutura e style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>+Mu</title>
 </head>
 <body>
-  <div class="container-fluid">
+  <div class="container">
     <header>
       <section >
         <div class="row menu blue">
@@ -29,27 +29,25 @@
       </section>
       <section>
         <div class="row produto blue">
-          <div class="col-3">
+          <div class="col-6">
             <div class="texto-produto color-white">
               <h1>CONHECE O <b>CHOCOWHEFER</b> +MU?</h1>
               <p>O CHOCOLATINHO GOSTOSO E PROTEICO PARA A FORMIGA QUE HÁ EM VOCÊ.</p>
             </div>            
           </div>  
-          <div class="col-3">
+          <div class="col-6">
             <div id="sabores-produto">
-              <span class="color-blue baunilia">SABOR BAUNILIA</span>
-              <span class="color-white chocolate">SABOR CHOCOLATE</span>
+              <div class="color-blue circulo baunilia"><b>SABOR BAUNILIA</b></div>
+              <div class="color-white circulo chocolate"><b>SABOR CHOCOLATE</b></div>
             </div>            
-          </div>  
-          <div class="col-3">
-            <div id="imagens-produto">
-              <img src="img/prod-baunilia.png" alt="produto sabor baunilia">
-              <img src="img/prod-chocolate.png" alt="produto sabor chocolate">
-            </div>            
-          </div> 
-          <div class="col-3">
+            <img src="img/prod-baunilia.png" alt="produto sabor baunilia" class="img-produto img-produto-baunilha">
+            <img src="img/prod-chocolate.png" alt="produto sabor chocolate" class="img-produto img-produto-chocolate">
+          </div>
+        </div> 
+        <div class="row produto blue">
+          <div class="col-12">
             <div class="proteina-produto color-white">
-              <span class="proteina">6g PROTEINA</span>
+              <div class="circulo proteina"><b>6g</b> PROTEÍNA</div>
             </div>  
           </div>   
         </div>
@@ -65,9 +63,9 @@
       <section>
         <div class="row pedaco">
           <div class="col-12 color-blue">
-            <p><b>Nao precisa mais ignorar a vontade de doce!</b> <br>
+            <p><b>Não precisa mais ignorar a vontade de doce!</b> <br>
               Afinal a vida e muuuuuito mais gostosa com um chocolatinho.<br>
-              Melhor ainda se ele for proteico, sem adicao de acucar <br> e crocante do jeito que voce gosta.
+              Melhor ainda se ele for proteico, sem adição de açúcar <br> e crocante do jeito que você gosta.
             </p>
             <img src="img/chocolate.png" alt="pedaco de chocolate">
           </div>
@@ -83,7 +81,7 @@
       <section>
         <div class="row chamada">
           <div class="col-12 color-blue">
-            <p>INFORMAÇOES <b>MUUU</b>ITO IMPORTANTES:</p>
+            <p>INFORMAÇÕES <b>MUUU</b>ITO IMPORTANTES:</p>
           </div>
         </div>
         <div class="row selo">
@@ -128,7 +126,7 @@
       <section>
         <div class="row duvida">
           <div class="col-12">
-            <h2><b>WHEY E SO PRA <br> BOMBADO?</b></h2>
+            <h2><b>WHEY É SO PRA <br> BOMBADO?</b></h2>
             <p><b>A resposta é bem simples: NÃO.</b> Whey nada mais é que a proteína do soro do leite, o que quer dizer que ele pode ser consumido por, basicamente, todo mundo que pode tomar leite. Além de ser a proteína com o maior valor biológico, o whey promove mais saciedade que outros ingredientes, fortalece o sistema imunológico 
               e é absorvido rapidamente pelo organismo. E disso, não é só bombado que gosta.</P>
             <button class="compre">SAIBA MAIS</button>
@@ -192,12 +190,13 @@
       </section> 
       <section>
         <div class="row footer">
-          <div class="col-10">
+          <div class="col-10 social">
             <ul>
-              <a href="#" class="circle-icons fa fa-facebook"></a>
-              <a href="#" class="circle-icons fa fa-twitter"></a>              
-              <a href="#" class="circle-icons fa fa-google"></a>              
-              <a href="#" class="circle-icons fa fa-youtube"></a>
+              <a href="#" class="circulo-footer circle-icons fa fa-facebook"></a>
+              <a href="#" class="circulo-footer circle-icons fa fa-instagram"></a>
+              <a href="#" class="circulo-footer circle-icons fa fa-twitter"></a>
+              <a href="#" class="circulo-footer circle-icons fa fa-youtube"></a>
+              <a href="#" class="circulo-footer circle-icons fa fa-linkedin"></a> 
              </ul>
           </div>
           <div class="col-2">
