--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="col-2">
             <img src="img/logo.png">    
           </div>
-          <div class="col-10 light-blue color-white">   
+          <div class="col-md-10 col-sm-12 light-blue bold color-white">   
             <nav>
               <a href="">CHOCOWHEYFER</a>
               <a href="">INFORMAÇÃO NUTRICIONAL</a>
@@ -29,25 +29,29 @@
       </section>
       <section>
         <div class="row produto blue">
-          <div class="col-6">
+          <div class="col-md-6 col-sm-12">
             <div class="texto-produto color-white">
-              <h1>CONHECE O <b>CHOCOWHEFER</b> +MU?</h1>
+              <h1>CONHECE O <span class="bold">CHOCO<br>WHEFER</span> +MU?</h1>
               <p>O CHOCOLATINHO GOSTOSO E PROTEICO PARA A FORMIGA QUE HÁ EM VOCÊ.</p>
             </div>            
           </div>  
-          <div class="col-6">
+          <div class="col-6 produto-header hidden">
             <div id="sabores-produto">
-              <div class="color-blue circulo baunilia"><b>SABOR BAUNILIA</b></div>
-              <div class="color-white circulo chocolate"><b>SABOR CHOCOLATE</b></div>
+              <div class=" color-blue circulo baunilia"> <span class="bold">SABOR BAUNILIA</span></div>
+              <div class="color-white circulo chocolate"><span class="bold">SABOR CHOCOLATE</span></div>
             </div>            
             <img src="img/prod-baunilia.png" alt="produto sabor baunilia" class="img-produto img-produto-baunilha">
             <img src="img/prod-chocolate.png" alt="produto sabor chocolate" class="img-produto img-produto-chocolate">
+            <img src="img/x-branco.png" alt="um x branco" class="x-branco">
+            <img src="img/mais-branco.png" alt="um sinal de mais branco" class="primeiro-mais-branco">
+            <img src="img/mais-branco.png" alt="um sinal de mais branco" class="segundo-mais-branco">
+
           </div>
         </div> 
-        <div class="row produto blue">
+        <div class="row produto blue produto-body">
           <div class="col-12">
             <div class="proteina-produto color-white">
-              <div class="circulo proteina"><b>6g</b> PROTEÍNA</div>
+              <div class="circulo proteina hidden"><span class="bold">6g PROTEÍNA</span></div>
             </div>  
           </div>   
         </div>
@@ -61,13 +65,22 @@
       </section>
     </header> 
       <section>
+        <div class="row detalhe-azul">
+          <div class="col-12">
+            <img src="img/x-azul.png" alt="um x azul">
+          </div>
+        </div>
         <div class="row pedaco">
           <div class="col-12 color-blue">
-            <p><b>Não precisa mais ignorar a vontade de doce!</b> <br>
+            <div>
+              <p><b>Não precisa mais ignorar a vontade de doce!</b> <br>
               Afinal a vida e muuuuuito mais gostosa com um chocolatinho.<br>
               Melhor ainda se ele for proteico, sem adição de açúcar <br> e crocante do jeito que você gosta.
             </p>
+          </div>
+          <div class="imagem-pedaco">
             <img src="img/chocolate.png" alt="pedaco de chocolate">
+          </div> 
           </div>
         </div>
       </section>  
@@ -81,19 +94,19 @@
       <section>
         <div class="row chamada">
           <div class="col-12 color-blue">
-            <p>INFORMAÇÕES <b>MUUU</b>ITO IMPORTANTES:</p>
+            <p><span class="">INFORMAÇÕES <span class="bolder">MUUU</span>ITO IMPORTANTES:</span></p>
           </div>
         </div>
         <div class="row selo">
-          <div class="col-12">
+          <div class="col-12 hidden">
             <img src="img/selo.png" alt="selo da marca +MU">
           </div>
         </div>
         <div class="row tabelas">
-          <div class="col-6">
+          <div class="col-md-6 col-sm-12">
             <img src="img/tabela-chocolate.png" alt="tabela nutricional do sabor chocolate">
           </div>
-          <div class="col-6">
+          <div class="col-md-6 col-sm-12">
             <img src="img/tabela-baunilia.png" alt="tabela nutricional do sabor baunilia">
           </div>
         </div>
@@ -105,13 +118,13 @@
       </section>
       <section>
         <div class="row vaquinha blue">
-          <div class="col-6">
-            <img src="img/vaquinha.png" alt="imagem da vaquinha">
+          <div class="col-md-6 col-sm-12">
+            <img src="img/vaquinha.png" alt="imagem da vaquinha" class="imagem-vaquinha"> 
           </div>
-          <div class="col-6 color-white">
+          <div class="col-md-6 col-sm-12 color-white vaquinha-text">
             <p><b>SOBRE A VAQUINHA:</b></p>
-            <h2><b>UMA FOME LEVA A OUTRA.</b></h2>
-            <p><b>A +Mu é pra quem tem fome de sair do comodismo.</b> 
+            <h2><b>UMA FOME <br>LEVA A OUTRA.</b></h2>
+            <p><b>A +Mu é pra quem tem fome de sair do comodismo.</b> <br>
               E do sofá da sala. É pra quem tem fome de conquistar 
               o mundo, que conta os minutos pra próxima exploração - nem que ela seja uma caminhada pelo bairro. </p>
               
@@ -120,14 +133,17 @@
               saborosa proteína do rolê e <b>criamos produtos gostosos 
                 e saudáveis, nessa ordem sempre.</b>
               </p>
+              <img src="img/mais-branco.png" alt="um sinal de mais branco" class="vaquinha-mais-branco hidden">
           </div>
         </div>
       </section>
       <section>
         <div class="row duvida">
-          <div class="col-12">
+          <div class="col-md-12 col-sm-12">
+            <img src="img/x-azul.png" alt="um x azul" class="detalhe-x-duvida hidden">
+            <img src="img/mais-azul.png" alt="um sinal de mais azul" class="detalhe-mais-azul hidden">
             <h2><b>WHEY É SO PRA <br> BOMBADO?</b></h2>
-            <p><b>A resposta é bem simples: NÃO.</b> Whey nada mais é que a proteína do soro do leite, o que quer dizer que ele pode ser consumido por, basicamente, todo mundo que pode tomar leite. Além de ser a proteína com o maior valor biológico, o whey promove mais saciedade que outros ingredientes, fortalece o sistema imunológico 
+            <p><span class="bold">A resposta é bem simples: NÃO.</span> Whey nada mais é que a proteína do soro do leite, o que quer dizer que ele pode ser consumido por, basicamente, todo mundo que pode tomar leite. Além de ser a proteína com o maior valor biológico, o whey promove mais saciedade que outros ingredientes, fortalece o sistema imunológico 
               e é absorvido rapidamente pelo organismo. E disso, não é só bombado que gosta.</P>
             <button class="compre">SAIBA MAIS</button>
           </div>
@@ -135,13 +151,13 @@
       </section>
       <section>        
         <div class="row localizacao">
-          <div class="col-6 mapa">
+          <div class="col-md-6 col-sm-12 mapa">
             <img src="img/localizacao.png" alt="mapa do google para localizacao">
           </div>
-          <div class="col-6 color-blue find">
-            <h2><b>ONDE <br> ENCONTRAR?</b></h2>
+          <div class="col-md-6 col-sm-12 color-blue find">
+            <h2>ONDE <br> ENCONTRAR?</h2>
             <p>Além do nosso e-commerce,<br>também estamos em lojas físicas. <br> Veja onde encontrar a vaquinha <br>perto de você:</p>
-            <button class="compre">CLIQUE AQUI </button>
+            <button class="compre bold">CLIQUE AQUI </button>
           </div>          
             <div class="col-12 no-padding bottom">
               <img src="img/localizacao-bottom.png" alt="transicao para outra section">
@@ -151,34 +167,32 @@
       <section>
         <div class="row depoimento blue">
           <div class="col-12 color-white">
-            <h2>O QUE A GALERA ACHA:</h2>
+            <h2><b>O QUE A GALERA ACHA:</b></h2>
           </div>
-          <div class="col-3">
+          <div class="col-12 depoimento-imagem">
             <img src="img/balao1.png" alt="depoimento 1">
-          </div>
-          <div class="col-6">
-            <img src="img/balao2.png" alt="depoimento 2">
-          </div>
-          <div class="col-3">
+            <img src="img/balao2.png" alt="depoimento 2" class="balao-maior">
             <img src="img/balao3.png" alt="depoimento 3">
           </div>
-          <div class="col-12 ">
+           <div class="col-12 ">
             <img class="dots" src="img/dots.png" alt="pontos">
           </div>
         </div>
       </section>
       <section>
         <div class="row contato">
-          <div class="col-3 color-white">
-            <h2>CONTA PRA GENTE</h2>
-            <P>Experimentou nossos produtos? 
-              Conta pra gente a sua opinião! 
-              Vale elogio, crítica, sugestão ou 
-              até mesmo um mugido de gratidão.</p>            
-            </div>
-            <div class="col-3">
+          <div class="col-6 color-white conjunto-contato">
+            <div>
               <img src="img/rosto-vaquinha.png" alt="rosto da vaquinha">
             </div>
+            <div class="contato-text">
+              <h2>CONTA PRA GENTE</h2>
+              <P>Experimentou nossos produtos? 
+                Conta pra gente a sua opinião! 
+                Vale elogio, crítica, sugestão ou 
+                até mesmo um mugido de gratidão.</p>            
+              </div>
+            </div>            
             <div class="col-6">
               <form action="/action_page.php" method="get">              
                 <input type="text" id="name" name="name" placeholder="Seu nome"><br><br>              
