identing html and css

--- a/index.html
+++ b/index.html
@@ -1,71 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link href="style.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="./slick/slick.css">
-  <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css">
-  <title>+Mu</title>
-</head>
-<body>
-  <div class="container">
-    <header>
-      <section >
-        <div class="row menu blue">
-          <div class="col-md-2 col-sm-12">
-            <img src="img/logo.png">    
-          </div>
-          <div class="col-md-10 col-sm-12 light-blue bold color-white">   
-            <nav>
-              <a href="#chocowheyfer">CHOCOWHEYFER</a>
-              <a href="#info-nutri">INFORMAÇÃO NUTRICIONAL</a>
-              <a href="#sobre">SOBRE A +MU</a>
-              <a href="#onde">ONDE ENCONTRAR</a>
-              <a  class="compre" href="">COMPRE AGORA</a>
-            </nav>
-          </div> 
-        </div>
-      </section>
-      <section>
-        <div class="row produto blue">
-          <div class="col-md-6 col-sm-12">
-            <div id="chocowheyfer" class="texto-produto color-white">
-              <h1>CONHECE O <span class="bold">CHOCO<br>WHEFER</span> +MU?</h1>
-              <p>O CHOCOLATINHO GOSTOSO E PROTEICO PARA A FORMIGA QUE HÁ EM VOCÊ.</p>
-            </div>            
-          </div>  
-          <div class="col-6 produto-header hidden">
-            <div id="sabores-produto">
-              <div class=" color-blue circulo baunilia"> <span class="bold shorter-line">SABOR BAUNILIA</span></div>
-              <div class="color-white circulo chocolate"><span class="bold shorter-line">SABOR CHOCOLATE</span></div>
-            </div>            
-            <img src="img/prod-baunilia.png" alt="produto sabor baunilia" class="img-produto img-produto-baunilha">
-            <img src="img/prod-chocolate.png" alt="produto sabor chocolate" class="img-produto img-produto-chocolate">
-            <img src="img/x-branco.png" alt="um x branco" class="x-branco">
-            <img src="img/mais-branco.png" alt="um sinal de mais branco" class="primeiro-mais-branco">
-            <img src="img/mais-branco.png" alt="um sinal de mais branco" class="segundo-mais-branco">
-
-          </div>
-        </div> 
-        <div class="row produto blue produto-body">
-          <div class="col-12">
-            <div class="proteina-produto color-white">
-              <div class="circulo proteina hidden"><span class="highlight-text bold">6g</span> PROTEÍNA</div>
-            </div>  
-          </div>   
-        </div>
-        <div class="row produto-bottom ">
-          <div class="col-12 no-padding">
-            <div id="bottom-produto">
-              <img src="img/header-bottom.png" alt="header bottom">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css">
+    <title>+Mu</title>
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <section >
+          <div class="row menu blue">
+            <div class="col-md-2 col-sm-12">
+              <img src="img/logo.png">    
+            </div>
+            <div class="col-md-10 col-sm-12 light-blue bold color-white">
+              <nav>
+                <a href="#chocowheyfer">CHOCOWHEYFER</a>
+                <a href="#info-nutri">INFORMAÇÃO NUTRICIONAL</a>
+                <a href="#sobre">SOBRE A +MU</a>
+                <a href="#onde">ONDE ENCONTRAR</a>
+                <a  class="compre" href="">COMPRE AGORA</a>
+              </nav>
             </div>
           </div>
-        </div>
-      </section>
-    </header> 
+        </section>
+        <section>
+          <div class="row produto blue">
+            <div class="col-md-6 col-sm-12">
+              <div id="chocowheyfer" class="texto-produto color-white">
+                <h1>CONHECE O <span class="bold">CHOCO<br>WHEFER</span> +MU?</h1>
+                <p>O CHOCOLATINHO GOSTOSO E PROTEICO PARA A FORMIGA QUE HÁ EM VOCÊ.</p>
+              </div>
+            </div>
+            <div class="col-6 produto-header hidden">
+              <div id="sabores-produto">
+                <div class=" color-blue circulo baunilia"> <span class="bold shorter-line">SABOR BAUNILIA</span></div>
+                <div class="color-white circulo chocolate"><span class="bold shorter-line">SABOR CHOCOLATE</span></div>
+              </div>
+              <img src="img/prod-baunilia.png" alt="produto sabor baunilia" class="img-produto img-produto-baunilha">
+              <img src="img/prod-chocolate.png" alt="produto sabor chocolate" class="img-produto img-produto-chocolate">
+              <img src="img/x-branco.png" alt="um x branco" class="x-branco">
+              <img src="img/mais-branco.png" alt="um sinal de mais branco" class="primeiro-mais-branco">
+              <img src="img/mais-branco.png" alt="um sinal de mais branco" class="segundo-mais-branco">
+            </div>
+          </div>
+          <div class="row produto blue produto-body">
+            <div class="col-12">
+              <div class="proteina-produto color-white">
+                <div class="circulo proteina hidden"><span class="highlight-text bold">6g</span> PROTEÍNA</div>
+              </div>
+            </div>
+          </div>
+          <div class="row produto-bottom ">
+            <div class="col-12 no-padding">
+              <div id="bottom-produto">
+                <img src="img/header-bottom.png" alt="header bottom">
+              </div>
+            </div>
+          </div>
+        </section>
+      </header>
       <section>
         <div class="row detalhe-azul">
           <div class="col-12">
@@ -76,23 +75,23 @@
           <div class="col-12 color-blue">
             <div>
               <p><b>Não precisa mais ignorar a vontade de doce!</b> <br>
-              Afinal a vida e muuuuuito mais gostosa com um chocolatinho.<br>
-              Melhor ainda se ele for proteico, sem adição de açúcar <br> e crocante do jeito que você gosta.
-            </p>
-          </div>
-          <div class="imagem-pedaco">
-            <img src="img/chocolate.png" alt="pedaco de chocolate">
-          </div> 
+                Afinal a vida e muuuuuito mais gostosa com um chocolatinho.<br>
+                Melhor ainda se ele for proteico, sem adição de açúcar <br> e crocante do jeito que você gosta.
+              </p>
+            </div>
+            <div class="imagem-pedaco">
+              <img src="img/chocolate.png" alt="pedaco de chocolate">
+            </div>
           </div>
         </div>
-      </section>  
+      </section>
       <section>
         <div class="row video">
           <div class="col-12">
             <iframe width="100%" height="523" src="https://www.youtube.com/embed/uDsCtXzkp9w?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
           </div>
         </div>
-      </section>  
+      </section>
       <section>
         <div class="row chamada">
           <div class="col-12 color-blue">
@@ -160,14 +159,14 @@
             <h2><b>UMA FOME <br>LEVA A OUTRA.</b></h2>
             <p><b>A +Mu é pra quem tem fome de sair do comodismo.</b> <br>
               E do sofá da sala. É pra quem tem fome de conquistar 
-              o mundo, que conta os minutos pra próxima exploração - nem que ela seja uma caminhada pelo bairro. </p>
-              
-              <p>Nosso objetivo é matar a fome do seu estômago para que você mate a sua fome de viver. 
+              o mundo, que conta os minutos pra próxima exploração - nem que ela seja uma caminhada pelo bairro. 
+            </p>
+            <p>Nosso objetivo é matar a fome do seu estômago para que você mate a sua fome de viver. 
               Por isso, buscamos democratizar a melhor e mais 
               saborosa proteína do rolê e <b>criamos produtos gostosos 
-                e saudáveis, nessa ordem sempre.</b>
-              </p>
-              <img src="img/mais-branco.png" alt="um sinal de mais branco" class="vaquinha-mais-branco hidden">
+              e saudáveis, nessa ordem sempre.</b>
+            </p>
+            <img src="img/mais-branco.png" alt="um sinal de mais branco" class="vaquinha-mais-branco hidden">
           </div>
         </div>
       </section>
@@ -178,12 +177,13 @@
             <img src="img/mais-azul.png" alt="um sinal de mais azul" class="detalhe-mais-azul hidden">
             <h2><b>WHEY É SO PRA <br> BOMBADO?</b></h2>
             <p><span class="bold">A resposta é bem simples: NÃO.</span> Whey nada mais é que a proteína do soro do leite, o que quer dizer que ele pode ser consumido por, basicamente, todo mundo que pode tomar leite. Além de ser a proteína com o maior valor biológico, o whey promove mais saciedade que outros ingredientes, fortalece o sistema imunológico 
-              e é absorvido rapidamente pelo organismo. E disso, não é só bombado que gosta.</P>
+              e é absorvido rapidamente pelo organismo. E disso, não é só bombado que gosta.
+            </P>
             <button class="compre">SAIBA MAIS</button>
           </div>
         </div>
       </section>
-      <section>        
+      <section>
         <div id="onde" class="row localizacao">
           <div class="col-md-6 col-sm-12 mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7313.043174286135!2d-46.66698727516924!3d-23.585619888683162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59e6f06b0f89%3A0x43617829f701baf6!2sIbirapuera%2C%20S%C3%A3o%20Paulo%20-%20State%20of%20S%C3%A3o%20Paulo!5e0!3m2!1sen!2sbr!4v1594078550900!5m2!1sen!2sbr" width="80%" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -192,11 +192,11 @@
             <h2>ONDE <br> ENCONTRAR?</h2>
             <p class="v-magin-30">Além do nosso e-commerce,<br>também estamos em lojas físicas. <br> Veja onde encontrar a vaquinha <br>perto de você:</p>
             <button class="compre bold">CLIQUE AQUI </button>
-          </div>          
-            <div class="col-12 no-padding bottom">
-              <img src="img/localizacao-bottom.png" alt="transicao para outra section">
-            </div>
-        </div>        
+          </div>
+          <div class="col-12 no-padding bottom">
+            <img src="img/localizacao-bottom.png" alt="transicao para outra section">
+          </div>
+        </div>
       </section>
       <section>
         <div class="row depoimento blue">
@@ -236,19 +236,20 @@
               <P>Experimentou nossos produtos? 
                 Conta pra gente a sua opinião! 
                 Vale elogio, crítica, sugestão ou 
-                até mesmo um mugido de gratidão.</p>            
-              </div>
-            </div>            
-            <div class="col-6">
-              <form action="/" method="get">              
-                <input type="text" id="name" name="name" placeholder="Seu nome">              
-                <input type="text" id="email" name="email" placeholder="Seu e-mail">              
-                <textarea type="text" id="mensagem" name="mensagem" placeholder="Sua mensagem"></textarea>
-                <input type="submit" class="compre" value="Enviar">
-              </form>
+                até mesmo um mugido de gratidão.
+              </p>
             </div>
-          </div>        
-      </section> 
+          </div>
+          <div class="col-6">
+            <form action="/" method="get">              
+              <input type="text" id="name" name="name" placeholder="Seu nome">              
+              <input type="text" id="email" name="email" placeholder="Seu e-mail">              
+              <textarea type="text" id="mensagem" name="mensagem" placeholder="Sua mensagem"></textarea>
+              <input type="submit" class="compre" value="Enviar">
+            </form>
+          </div>
+        </div>
+      </section>
       <section>
         <div class="row footer">
           <div class="col-10 social">
@@ -258,19 +259,18 @@
               <a href="#" class="circulo-footer circle-icons fa fa-twitter"></a>
               <a href="#" class="circulo-footer circle-icons fa fa-youtube"></a>
               <a href="#" class="circulo-footer circle-icons fa fa-linkedin"></a> 
-             </ul>
+            </ul>
           </div>
           <div class="col-2">
             <img src="img/logo-footer.png" alt="logo +Mu">
           </div>
         </div>
       </section>
-    
-  </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  <script src="./slick/slick.js" type="text/javascript" charset="utf-8"></script>
-  <script src="./main.js" type="text/javascript"></script>
-</body>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="./slick/slick.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./main.js" type="text/javascript"></script>
+  </body>
 </html>
